--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
-    <div class="instagram-logo" >
+    <!-- <div class="instagram-logo" >
         <div class="outer-circle">
             <div class="inner-circle"></div>
         </div>
-    </div>
+    </div> -->
+    <div class = logoOut>
+    <div class="logo">MM</div>
+</div>
     <div class = "navBar">
         <a href = "#intro" class = "navButton">Intro</a>
         <a href = "#char" class = "navButton">Char's</a>
