--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     After completing college in 1986, Martin Majoor began his Serif font family between 1988 and 1994, in his original family he had two typefaces, Scala and Scala Sans. These two fonts proved to work great in corporate design, book design and newspaper design. In 2004 Martin decided he needed to add one more font to the family.
                 </p>
                 <p id ="p2">
-                    This font came to be Nexus serif, based partly on a previous Seria Martin had created earlier on but with a stronger workhorse feeling to it. From here he branched out multiple new fonts, Nexus Sans, Nexus mix and finally a Nexus typewriter. Something that really sets the Nexus family apart from other font families is the italic touches he put on them. First there is two series of elegant swash capitals and then lowercase swashes which provide both long and short end swashes.
+                    This font came to be Nexus serif, based partly on a previous Seria that Martin had created earlier on but with a stronger workhorse feeling to it. From here he branched out to multiple new fonts, Nexus Sans, Nexus mix and finally a Nexus typewriter. Something that really sets the Nexus family apart from other font families is the italic touches he put on them. There is two series of elegant swash capitals and for lowercase specifically there is swashes for both long and short end.
                 </p>
             </div>
             <div class = "footer">
